@@ -11,6 +11,9 @@ Revision history for Perl extension Module::Build.
    list of all prerequisites, the versions required, and the versions
    actually installed. [David Wheeler]
 
+ - Clarified the directory name that's created during the 'distdir'
+   action. [Suggested by Typler MacDonald]
+
  - Fixed a bug when creating the META.yml file without the help of
    YAML.pm - some common strings weren't quoted & escaped properly.
    Now only some uncommon ones are. [Spotted by Joshua ben Jore]
